<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutColor"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <com.primesoft.cryptanil.app_views.AppToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:actionText="@string/cancel"
            app:title="@string/crypto_types" />

        <EditText
            android:id="@+id/typeSearchET"
            style="@style/AppEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/search_type_background"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="10dp"
            android:hint="@string/search_crypto_type"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:labelFor="@+id/toolbar"
            android:padding="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/typeSearchET"
            android:background="@color/borderColor" />
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/typesRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header" />

</RelativeLayout>