<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutColor"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.primesoft.cryptanil.app_views.AppToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:actionText="@string/done"
            app:title="@string/transaction_status" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:paddingBottom="40dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center|top"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|top"
                        android:orientation="vertical"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:id="@+id/statusIV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/submitted" />

                        <TextView
                            android:id="@+id/statusTV"
                            style="@style/AppTextStyleBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/payment_submitted"
                            android:textSize="@dimen/big_text_size" />

                        <TextView
                            android:id="@+id/statusMessageTV"
                            style="@style/AppTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:gravity="center"
                            android:lineSpacingExtra="-1dp"
                            android:text="@string/status_submitted_message"
                            android:textColor="@color/textButtonColor" />

                        <com.google.android.material.progressindicator.LinearProgressIndicator
                            android:id="@+id/progressIndicator"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="35dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="35dp"
                            android:indeterminate="true"
                            app:trackCornerRadius="10dp"
                            app:trackThickness="5dp" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/infoHolder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="vertical" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/actionBT"
                    style="@style/AppButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="10dp"
                    android:text="@string/go_to_merchant" />

                <TextView
                    android:id="@+id/transactionsTV"
                    style="@style/AppTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="15dp"
                    android:text="@string/transactions"
                    android:textColor="@color/buttonColor"
                    android:visibility="gone" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/transactionsHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/companyHolder"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </RelativeLayout>
</ScrollView>
